fix: フォルダ構成変更

--- a/src/components/base/Banner.pug
+++ b/src/components/base/Banner.pug
@@ -6,4 +6,4 @@ mixin Banner(params={})
     if props.description
       p.banner__description#banner-desc
         = props.description
-    img.banner__icon(src="../images/common/" + props.icon alt="")
+    img.banner__icon(src="../../images/common/" + props.icon alt="")
