--- a/src/components/base/ContactBanner.pug
+++ b/src/components/base/ContactBanner.pug
@@ -18,4 +18,4 @@ mixin ContactBanner(params={})
         = `大黒市役所　${props.dep}　${props.div}`
       p.contact-form-in-charge
         = props.inCharge + "担当"
-    img(src="../images/common/contact.png" alt="" class="contact-banner-img")
+    img(src="../../images/common/contact.png" alt="" class="contact-banner-img")
