--- a/src/components/common/_header.pug
+++ b/src/components/common/_header.pug
@@ -3,7 +3,7 @@ header.header.x-header
     .content-top.layout-default
       .icon-wrapper
         a(href="/")
-          img(src="../images/common/daikoku-icon.png" alt="大黒市" class="logo")
+          img(src="../../images/common/daikoku-icon.png" alt="大黒市" class="logo")
       .alert-trigger
         button.alert-trigger__btn(aria-expanded="false" aria-controls="alert-section")
           p.alert-trigger__text
