--- a/src/components/parts/_life-scene-header.pug
+++ b/src/components/parts/_life-scene-header.pug
@@ -3,4 +3,4 @@
     | ライフシーンで探す
   p.life-scene-header__description#life-scene-desc
     | 人生の出来事、「こんなことがしたい」「知りたい」といったことを<br>選択いただくことで、ご自身に合った検索ができます。
-  img.life-scene-header__icon(src="../images/common/search_menu_img.png" alt="")
+  img.life-scene-header__icon(src="../../images/common/search_menu_img.png" alt="")
