--- a/src/components/pages/index.pug
+++ b/src/components/pages/index.pug
@@ -4,11 +4,12 @@ block pageOption
 	- contentClass.push('index-container')
 
 block content
-	//- section.section-content__hero
-	//- 	img(src="../images/top/top_hero_1.png" alt="" class="hero-img")
-	//- 	img(src="../images/top/top_hero_1_logo.png" alt="" class="logo-img")
-	//- 	img(src="../images/top/top_label_pc.png" alt="" class="label-img-pc")
-	//- 	img(src="../images/top/top_label_sp.png" alt="" class="label-img-sp")
+	section.section-content
+		include ../parts/_alert.pug
+
+	//- section.section-content
+	//- 	include ../parts/_hero.pug
+
 	section.section-content
 		include ../parts/_slider.pug
 
