--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -35,6 +35,7 @@
 @import "parts/top-menu-2";
 @import "parts/citizen-menu-2";
 @import "parts/slider";
+@import "parts/hero";
 @import "common/footer";
 @import "page/index";
 @import "page/search";
