--- a/src/stylesheets/parts/_alert.scss
+++ b/src/stylesheets/parts/_alert.scss
@@ -1,14 +1,6 @@
 .section-content__alert {
 	@extend .layout-default;
-	max-height: 0;
-	padding: 0;
-	transition: all 0.4s;
-
-	&[aria-hidden="false"] {
-		max-height: 800px;
-		padding: 64px 0;
-		transition: all 0.6s;
-	}
+	padding: 64px 0;
 }
 .sp-only-br {
 	display: none;
@@ -63,6 +55,10 @@
 }
 
 @media only screen and (max-width: breakpoint(sp)) {
+	.section-content__alert {
+		@extend .layout-default;
+		padding: 16px 0;
+	}
 	.alert {
 		margin: 0 16px;
 	}
