--- a/src/components/base/Search.pug
+++ b/src/components/base/Search.pug
@@ -6,7 +6,7 @@ mixin Search(params={})
         class="search__input"
         type="search"
         size="100"
-        placeholder="キーワードを入力"
+        placeholder="検索"
       )
       button(type="submit" value="search" class="search__btn" aria-label="検索")
         i(class="fas fa-search")
