--- a/src/components/common/_header.pug
+++ b/src/components/common/_header.pug
@@ -1,9 +1,16 @@
-header.header.x-header
-  .header-wrapper.box-shadow
-    .content-top.layout-default
-      .icon-wrapper
+include ../base/Search.pug
+
+header.header
+  .header__wrapper
+    .header__content
+      .header__icon
         a(href="/")
           img(src="../../images/common/daikoku-icon.png" alt="大黒市" class="logo")
+      .header__search 
+        +Search()
+      .header__menu
+        .menu
+          span.menu__icon
       include ./_accessibility.pug
 
 
