fix: accessibilityのスタイルを分割

--- a/src/components/common/_accessibility.pug
+++ b/src/components/common/_accessibility.pug
@@ -1,5 +1,5 @@
 -
-  var font = [
+  const font = [
     {
       meta: "regular",
       name: "標準",
@@ -9,7 +9,7 @@
       name: "拡大",
     }
   ]
-  var color = [
+  const color = [
     {
       meta: "black",
       name: "黒",
