--- a/src/stylesheets/common/_header.scss
+++ b/src/stylesheets/common/_header.scss
@@ -29,130 +29,6 @@
 			height: auto;
 		}
 	}
-	.accessibility {
-		display: flex;
-		line-height: 1;
-
-		.select-list,
-		.select-language {
-			border: 1px solid #a6adc6;
-			border-radius: 4px;
-		}
-		& > * + * {
-			margin-left: 8px;
-		}
-	}
-	.select-language,
-	.select-font-size,
-	.select-color {
-		display: flex;
-		align-items: center;
-		overflow: hidden;
-		font-size: 14px;
-		color: #636b81;
-	}
-	.select-language {
-		select {
-			padding: 0 2px 0 13px;
-			line-height: 1.2;
-			transition: 0.2s all ease-in-out;
-			&:hover {
-				opacity: 0.8;
-				cursor: pointer;
-			}
-		}
-	}
-	.select-font-size,
-	.select-color {
-		.title {
-			padding: 7px 8px 7px 16px;
-			height: 100%;
-			display: flex;
-			align-items: center;
-		}
-		.select-list {
-			display: flex;
-		}
-		.select-item {
-			padding: 7px 16px;
-			flex-grow: 1;
-			transition: 0.2s all ease-in-out;
-			&:hover {
-				opacity: 0.8;
-				cursor: pointer;
-			}
-
-			& + .select-item {
-				border-left: 1px solid #a6adc6;
-			}
-			label {
-				display: flex;
-				align-items: center;
-				justify-items: center;
-				height: 100%;
-				transition: 0.2s all ease-in-out;
-				&:hover {
-					opacity: 0.8;
-					cursor: pointer;
-				}
-			}
-			.text {
-				width: max-content;
-			}
-		}
-		input[type="radio"] {
-			display: none;
-			&:checked + .check-box {
-				background-color: #636b81;
-			}
-		}
-		.check-box {
-			transition: 0.2s all ease-in-out;
-			border: 1px solid #636b81;
-			width: 14px;
-			height: 14px;
-			background-color: #fff;
-			border-radius: 2px;
-			margin-right: 8px;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			color: #fff;
-			font-size: 10px;
-		}
-	}
-	.select-color {
-		.color-yellow {
-			background-color: #0000ff;
-			color: #ffff00;
-			.check-box {
-				border-color: #ffff00;
-				background-color: #0000ff;
-				color: #0000ff;
-			}
-			input[type="radio"] {
-				&:checked + .check-box {
-					background-color: #0000ff;
-					color: #ffff00;
-				}
-			}
-		}
-		.color-white {
-			background-color: #000;
-			color: #fff;
-			.check-box {
-				border-color: #fff;
-				background-color: #000;
-				color: #000;
-			}
-			input[type="radio"] {
-				&:checked + .check-box {
-					background-color: #000;
-					color: #fff;
-				}
-			}
-		}
-	}
 }
 
 @media (max-width: breakpoint(sp)) {
@@ -174,6 +50,12 @@
 			display: flex;
 			width: 100%;
 		}
+		&__icon {
+			.logo {
+				margin-left: 16px;
+				width: 120px;
+			}
+		}
 		&__search {
 			display: block;
 			margin-right: 16px;
@@ -187,9 +69,6 @@
 			background-color: #fff;
 			position: relative;
 			z-index: z-index(layer-4) - 20;
-		}
-		.accessibility {
-			display: none;
 		}
 		.menu {
 			display: flex;
@@ -222,65 +101,5 @@
 				width: 20px;
 			}
 		}
-
-		.logo {
-			margin-left: 16px;
-			width: 120px;
-		}
-
-		.select-language,
-		.select-font-size,
-		.select-color {
-			display: flex;
-			align-items: center;
-			overflow: hidden;
-		}
-		.select-language {
-			padding: 12px 9px;
-			background-color: #fff;
-		}
-		.select-font-size,
-		.select-color {
-			.title {
-				width: 130px;
-				min-width: 130px;
-				padding: 12px 9px;
-			}
-			.select-list {
-				flex-grow: 1;
-			}
-			.select-item {
-				padding: 12px 9px;
-				display: flex;
-				justify-content: center;
-			}
-			.check-box {
-				width: 18px;
-				min-width: 18px;
-				height: 18px;
-				margin-right: 6px;
-			}
-		}
-	}
-}
-
-@media (max-width: breakpoint(iPhone5)) {
-	.header {
-		font-size: 14px;
-	}
-	.header .select-font-size .title,
-	.header .select-color .title {
-		width: 110px;
-		min-width: 110px;
-	}
-	.header .select-font-size .select-item,
-	.header .select-color .select-item {
-		padding: 10px 7px;
-	}
-	.header .nav .nav-item {
-		font-size: 14px;
-	}
-	.header .nav .nav-item a {
-		padding: 16px 15px;
 	}
 }
