--- a/src/components/pages/category-top.pug
+++ b/src/components/pages/category-top.pug
@@ -106,7 +106,7 @@ block pageOption
         text: "本文です本文です本文です本文です本文です本文です本文です",
         summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
         application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-        link: "../citizen3.html"
+        link: "./detail.html"
       },
       {
         title: "母子父子寡婦福祉資金貸付制度",
