--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -36,10 +36,11 @@
 @import "parts/citizen-menu-2";
 @import "parts/slider";
 @import "parts/hero";
+@import "parts/anchor-list";
 @import "common/footer";
 @import "page/index";
 @import "page/search";
 @import "page/search-result";
 @import "page/citizen2";
-@import "page/citizen3";
+@import "page/detail";
 @import "page/category-top";
