--- a/src/stylesheets/page/detail.scss
+++ b/src/stylesheets/page/detail.scss
@@ -2,6 +2,7 @@
 	@extend .layout-default;
 	background-color: #fff;
 	margin-top: 64px;
+	margin-bottom: 64px;
 	padding: 64px 48px;
 
 	&__title {
@@ -12,14 +13,15 @@
 		font-size: 30px;
 		font-weight: bold;
 		margin: 64px 0 40px 0;
+		position: relative;
 		&::after {
-			background-color: #cdd6dd;
+			background-color: colors(primary);
 			content: "";
 			display: block;
 			height: 2px;
 			margin-top: 40px;
 			position: absolute;
-			width: 56px;
+			width: 100%;
 		}
 	}
 	&__sub-heading {
@@ -80,24 +82,9 @@
 	}
 }
 
-.anchor-nav {
-	margin: 56px 0;
-}
-.anchor-nav-list {
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-	border-bottom: 2px solid #f0f3f5;
-	&__item {
-		color: colors(primary);
-		border-bottom: 2px solid transparent;
-		&:hover {
-			opacity: 0.8;
-			border-bottom: 2px solid colors(primary);
-		}
-	}
-	&__link {
-		display: block;
-		padding-bottom: 24px;
+@media (max-width: breakpoint(sp)) {
+	.article {
+		padding: 64px 16px;
+		margin: 64px 8px;
 	}
 }
