--- a/src/stylesheets/base/_radio.scss
+++ b/src/stylesheets/base/_radio.scss
@@ -4,7 +4,7 @@ $radio-border-color: #ccc;
 
 .radio {
 	display: block;
-	padding: 16px 0 16px 44px;
+	padding: 16px 4px 16px 44px;
 	border-radius: 6px;
 
 	&__input {
