--- a/src/stylesheets/page/_category-top.scss
+++ b/src/stylesheets/page/_category-top.scss
@@ -70,7 +70,10 @@
 	}
 	&__item {
 		@extend .box-shadow;
+		display: flex;
+		align-items: center;
 		border: 1px solid #e1e1e1;
+		border-radius: 8px;
 		background-color: #fff;
 	}
 }
@@ -130,6 +133,30 @@
 			transform: rotate(-45deg);
 			left: 4px;
 			top: 6px;
+		}
+	}
+}
+
+@media (max-width: breakpoint(sp)) {
+	.category-search {
+		display: block;
+	}
+	.search-result-main,
+	.search-result-condition {
+		width: 100%;
+	}
+	.radio-list {
+		&__list {
+			flex-direction: row;
+			justify-content: space-between;
+			flex-wrap: wrap;
+		}
+		&__item {
+			width: 100%;
+			height: 70px;
+		}
+		&__item:not(:first-child) {
+			width: calc(100% / 2 - 8px);
 		}
 	}
 }
