fix: category-top修正

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -19,6 +19,8 @@
 @import "base/link-menu";
 @import "base/contact-banner";
 @import "base/banner";
+@import "base/tag";
+@import "base/search-result";
 @import "common/accessibility";
 @import "common/header";
 @import "common/slick";
