--- a/src/components/pages/category-top.pug
+++ b/src/components/pages/category-top.pug
@@ -94,13 +94,13 @@ block pageOption
 
     const results = [
       {
-        title: "母子父子寡婦福祉資金貸付制度",
+        title: "特定不妊治療費助成",
         categories: [
           {
-            label: "ひとり親",
+            label: "金銭的支援",
           },
           {
-            label: "手当と助成",
+            label: "妊娠・出産に関する金銭的支援",
           },
         ],
         text: "本文です本文です本文です本文です本文です本文です本文です",
@@ -109,13 +109,55 @@ block pageOption
         link: "./detail.html"
       },
       {
-        title: "母子父子寡婦福祉資金貸付制度",
+        title: "大黒市独自の不妊治療費助成",
         categories: [
           {
-            label: "ひとり親",
+            label: "金銭的支援",
           },
           {
-            label: "手当と助成",
+            label: "妊娠・出産に関する金銭的支援",
+          },
+        ],
+        text: "本文です本文です本文です本文です本文です本文です本文です",
+        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
+        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
+      },
+      {
+        title: "妊娠高血圧症候群（妊娠中毒症）に関する助成",
+        categories: [
+          {
+            label: "金銭的支援",
+          },
+          {
+            label: "妊娠・出産に関する金銭的支援",
+          },
+        ],
+        text: "本文です本文です本文です本文です本文です本文です本文です",
+        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
+        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
+      },
+      {
+        title: "出産前後の国民年金保険料免除",
+        categories: [
+          {
+            label: "金銭的支援",
+          },
+          {
+            label: "妊娠・出産に関する金銭的支援",
+          },
+        ],
+        text: "本文です本文です本文です本文です本文です本文です本文です",
+        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
+        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
+      },
+      {
+        title: "出産育児一時金",
+        categories: [
+          {
+            label: "金銭的支援",
+          },
+          {
+            label: "妊娠・出産に関する金銭的支援",
           },
         ],
         text: "本文です本文です本文です本文です本文です本文です本文です",
@@ -126,24 +168,10 @@ block pageOption
         title: "母子父子寡婦福祉資金貸付制度",
         categories: [
           {
-            label: "ひとり親",
+            label: "金銭的支援",
           },
           {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
+            label: "妊娠・出産に関する金銭的支援",
           },
         ],
         text: "本文です本文です本文です本文です本文です本文です本文です",
@@ -154,24 +182,10 @@ block pageOption
         title: "母子父子寡婦福祉資金貸付制度",
         categories: [
           {
-            label: "ひとり親",
+            label: "金銭的支援",
           },
           {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
+            label: "妊娠・出産に関する金銭的支援",
           },
         ],
         text: "本文です本文です本文です本文です本文です本文です本文です",
@@ -182,24 +196,10 @@ block pageOption
         title: "母子父子寡婦福祉資金貸付制度",
         categories: [
           {
-            label: "ひとり親",
+            label: "金銭的支援",
           },
           {
-            label: "手当と助成",
-          },
-        ],
-        text: "本文です本文です本文です本文です本文です本文です本文です",
-        summary: "概要です概要です概要です概要です概要です概要です概要です概要です",
-        application: "申込です申込です申込です申込です申込です申込です申込です申込です申込です",
-      },
-      {
-        title: "母子父子寡婦福祉資金貸付制度",
-        categories: [
-          {
-            label: "ひとり親",
-          },
-          {
-            label: "手当と助成",
+            label: "妊娠・出産に関する金銭的支援",
           },
         ],
         text: "本文です本文です本文です本文です本文です本文です本文です",
@@ -210,10 +210,10 @@ block pageOption
         title: "母子父子寡婦福祉資金貸付制度",
         categories: [
           {
-            label: "ひとり親",
+            label: "金銭的支援",
           },
           {
-            label: "手当と助成",
+            label: "妊娠・出産に関する金銭的支援",
           },
         ],
         text: "本文です本文です本文です本文です本文です本文です本文です",
@@ -227,10 +227,15 @@ include ../base/Button.pug
 include ../base/Banner.pug
 include ../base/Radio.pug
 include ../base/Checkbox.pug
+include ../base/SearchResult.pug
+include ../base/ContactBanner.pug
 
 block content
   section.section-content__header
-    +Banner({title: "妊娠から子育て", icon: "pregnant_child_icon.png"})
+    +Banner({
+      title: "妊娠から子育て",
+      icon: "pregnant_child_icon.png"
+    })
 
   section.section-content
     .category-search
@@ -247,7 +252,13 @@ block content
           +Accordion({title: "change-condition", items: [{label: "絞り込む"}]})
             ul
               each item in checkboxList
-                +Checkbox({id: item.id, name: item.name, value: item.value, checked: item.checked, label: item.label})
+                +Checkbox({
+                  id: item.id,
+                  name: item.name,
+                  value: item.value,
+                  checked: item.checked,
+                  label: item.label
+                })
 
       section.search-result-main
         h2.category-search__count
@@ -255,22 +266,15 @@ block content
         ul.search-result-list
           each result in results
             li.search-result-list__item
-              a.search-result-list__link(href=result.link)
-                h2.search-result-list__title
-                  = result.title
-              .category-search__category 
-                ul.category-list 
-                  each category in result.categories 
-                    li.category-list-item 
-                      span.category-list-item__label 
-                        = category.label
-              p.search-result-list__text
-                = result.text
-              .search-result-list-summary
-                h3.search-result-list-summary__title 概要
-                p.search-result-list-summary__text
-                  = result.summary
-              .search-result-list-application
-                h3.search-result-list-application__title 申し込み
-                p.search-result-list-summary__text
-                  = result.application
+              +SearchResult({
+                title: result.title,
+                categories: result.categories,
+                text: result.text,
+                link: result.link,
+                summary: result.summary,
+                application: result,application
+              })
+
+  section.section-content.bg-light
+    .section-content__contact
+      +ContactBanner({tel1: "03", tel2: "0000", tel3: "1111", dep: "健康福祉課", div: "保健所総務課", inCharge: "新型コロナウイルスワクチン"})
