--- a/src/stylesheets/page/_category-top.scss
+++ b/src/stylesheets/page/_category-top.scss
@@ -4,6 +4,7 @@
 	justify-content: space-between;
 	gap: 16px;
 	margin-top: 64px;
+	padding-bottom: 48px;
 	width: 100%;
 	&__count {
 		font-size: 24px;
@@ -12,151 +13,67 @@
 	&__category {
 		margin: 24px 0;
 	}
-}
 
-.search-result-main {
-	@extend .box-shadow;
-	background-color: #fff;
-	border-radius: 8px;
-	padding: 32px 24px;
-	width: calc(70% - 16px);
-}
-.search-result-condition {
-	width: calc(30% - 16px);
-	&__title {
-		font-size: 24px;
-		font-weight: bold;
-	}
-	&__form {
-		margin: 24px 0;
-	}
-	&__btn {
-		text-align: center;
-		margin-top: 24px;
-	}
-}
-
-.search-result-list {
-	margin-top: 24px;
-	&__title {
-		font-size: 24px;
-		font-weight: bold;
-		color: colors(primary);
-		&:hover {
-			opacity: 0.8;
-		}
-	}
-	&__item:not(:first-child) {
-		margin-top: 32px;
-	}
-	&__item:not(:last-child) {
-		border-bottom: 1px solid #cdd6dd;
-	}
-	&__link {
-		text-decoration: underline;
-		text-decoration-color: colors(primary);
-		&:hover {
-			cursor: pointer;
-		}
-	}
-}
-
-.radio-list {
-	margin-bottom: 48px;
-	&__list {
-		display: flex;
-		flex-direction: column;
-		gap: 8px;
-	}
-	&__item {
+	.search-result-main {
 		@extend .box-shadow;
-		display: flex;
-		align-items: center;
-		border: 1px solid #e1e1e1;
-		border-radius: 8px;
 		background-color: #fff;
+		border-radius: 8px;
+		padding: 32px 24px;
+		width: calc(70% - 16px);
 	}
-}
-
-.search-result-list-summary {
-	margin: 24px 48px;
-	&__title {
-		font-size: 18px;
-		font-weight: bold;
-		color: colors(primary);
-	}
-}
-.search-result-list-application {
-	margin: 24px 48px;
-	&__title {
-		font-size: 18px;
-		font-weight: bold;
-		color: colors(primary);
-	}
-}
-
-.category-list {
-	display: flex;
-	gap: 8px;
-	margin: 16px 0;
-}
-.category-list-item {
-	border: 1px solid #c5c8d1;
-	border-radius: 50px;
-	padding: 4px 16px;
-
-	&__label {
-		position: relative;
-		padding-left: 24px;
-		&::before,
-		&::after {
-			content: "";
-			display: block;
-			position: absolute;
+	.search-result-condition {
+		width: calc(30% - 16px);
+		&__title {
+			font-size: 24px;
+			font-weight: bold;
 		}
-
-		&::before {
-			width: 16px;
-			height: 16px;
-			border-radius: 50px;
-			background-color: colors(primary);
-			border: 1px solid colors(primary);
-			left: 0;
-			top: 0;
+		&__form {
+			margin: 24px 0;
 		}
-		&::after {
-			border-left: 2px solid #fff;
-			border-bottom: 2px solid #fff;
-			width: 8px;
-			height: 4px;
-			-webkit-transform: rotate(-45deg);
-			transform: rotate(-45deg);
-			left: 4px;
-			top: 6px;
+		&__btn {
+			text-align: center;
+			margin-top: 24px;
+		}
+	}
+
+	.radio-list {
+		margin-bottom: 48px;
+		&__list {
+			display: flex;
+			flex-direction: column;
+			gap: 8px;
+		}
+		&__item {
+			@extend .box-shadow;
+			display: flex;
+			align-items: center;
+			border: 1px solid #e1e1e1;
+			border-radius: 8px;
+			background-color: #fff;
 		}
 	}
 }
-
 @media (max-width: breakpoint(sp)) {
 	.category-search {
 		display: block;
-	}
-	.search-result-main,
-	.search-result-condition {
-		width: 100%;
-	}
-	.radio-list {
-		&__list {
-			flex-direction: row;
-			justify-content: space-between;
-			flex-wrap: wrap;
-		}
-		&__item {
+
+		.search-result-main,
+		.search-result-condition {
 			width: 100%;
-			height: 70px;
 		}
-		&__item:not(:first-child) {
-			width: calc(100% / 2 - 8px);
+		.radio-list {
+			&__list {
+				flex-direction: row;
+				justify-content: space-between;
+				flex-wrap: wrap;
+			}
+			&__item {
+				width: 100%;
+				height: 70px;
+			}
+			&__item:not(:first-child) {
+				width: calc(100% / 2 - 8px);
+			}
 		}
 	}
 }
