--- a/src/components/pages/search.pug
+++ b/src/components/pages/search.pug
@@ -25,12 +25,17 @@ block pageOption
 
 include ../base/Breadcrumb.pug
 include ../base/Button.pug
+include ../base/Banner.pug
 
 block content
 	+Breadcrumb({items: breadcrumbItem})
 
 	section.section-content__header
-		include ../parts/_life-scene-header.pug
+		+Banner({
+			title: "選んで探す",
+			description: "人生の出来事、「こんなことがしたい」「知りたい」といったことを\n選択いただくことで、ご自身に合った検索ができます。",
+			icon: "search_menu_img.png"
+		})
 
 	section.section-content
 		form
