--- a/src/components/parts/_life-scene-header.pug
+++ b/src/components/parts/_life-scene-header.pug
@@ -2,5 +2,5 @@
   h1.life-scene-header__label(aria-describedby="life-scene-desc")
     | ライフシーンで探す
   p.life-scene-header__description#life-scene-desc
-    | 人生の出来事、「こんなことがしたい」「知りたい」といったことを<br>選択いただくことで、ご自身に合った検索ができます。
+    | 人生の出来事、「こんなことがしたい」「知りたい」といったことを<br class="pc-only-br">選択いただくことで、ご自身に合った検索ができます。
   img.life-scene-header__icon(src="../../images/common/search_menu_img.png" alt="")
