fix: 検索結果画面修正

--- a/src/components/base/Accordion.pug
+++ b/src/components/base/Accordion.pug
@@ -36,4 +36,5 @@ mixin Accordion(params={})
           aria-labelledby=triggerId
         )
           .accordion-panel__text
+            = item.content
             block
