--- a/src/components/pages/category-top.pug
+++ b/src/components/pages/category-top.pug
@@ -272,7 +272,7 @@ block content
                 text: result.text,
                 link: result.link,
                 summary: result.summary,
-                application: result,application
+                application: result.application
               })
 
   section.section-content.bg-light
