--- a/src/stylesheets/base/_checkbox.scss
+++ b/src/stylesheets/base/_checkbox.scss
@@ -5,7 +5,7 @@ $checkbox-border-color: #ccc;
 
 .checkbox {
 	display: block;
-	padding: 16px 32px;
+	padding: 16px 16px 16px 24px;
 	border-radius: 6px;
 
 	&__input {
