--- a/src/stylesheets/page/_search-result.scss
+++ b/src/stylesheets/page/_search-result.scss
@@ -19,10 +19,11 @@
 	background-color: #fff;
 	border-radius: 8px;
 	padding: 32px 24px;
-	width: calc(70% - 16px);
+	margin-bottom: 60px;
+	width: calc(65% - 16px);
 }
 .search-result-condition {
-	width: calc(30% - 16px);
+	width: calc(35% - 16px);
 	&__title {
 		font-size: 24px;
 		font-weight: bold;
@@ -33,6 +34,54 @@
 	&__btn {
 		text-align: center;
 		margin-top: 24px;
+	}
+
+	.scene-list {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: stretch;
+		gap: 4px;
+		&__item {
+			display: flex;
+			align-items: center;
+			border: 1px solid #e1e1e1;
+			background-color: #fff;
+			border-radius: 8px;
+			width: calc(50% - 2px);
+		}
+	}
+	.matters-list {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: stretch;
+		gap: 4px;
+
+		&__item {
+			display: flex;
+			align-items: center;
+			border: 1px solid #e1e1e1;
+			background-color: #fff;
+			border-radius: 8px;
+			width: calc(50% - 2px);
+		}
+	}
+	.status-list {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: stretch;
+		gap: 4px;
+
+		&__item {
+			display: flex;
+			align-items: center;
+			border: 1px solid #e1e1e1;
+			background-color: #fff;
+			border-radius: 8px;
+			width: calc(50% - 2px);
+		}
 	}
 }
 
@@ -117,5 +166,16 @@
 			left: 4px;
 			top: 6px;
 		}
+	}
+}
+@media only screen and (max-width: breakpoint(sp)) {
+	.search-result {
+		display: block;
+	}
+	.search-result-main {
+		width: 100%;
+	}
+	.search-result-condition {
+		width: 100%;
 	}
 }
