fix: グロナビ設置

--- a/src/components/pages/category-top.pug
+++ b/src/components/pages/category-top.pug
@@ -231,6 +231,7 @@ include ../base/SearchResult.pug
 include ../base/ContactBanner.pug
 
 block content
+  include ../parts/_global-navi.pug
   section.section-content__header
     +Banner({
       title: "妊娠から子育て",
