--- a/src/components/pages/citizen.pug
+++ b/src/components/pages/citizen.pug
@@ -1,6 +1,7 @@
 extends ../common/_layout
 
 block content
+  include ../parts/_global-navi.pug
   section.section-content
     include ../parts/_search-life-scene.pug
 
