--- a/src/components/pages/detail.pug
+++ b/src/components/pages/detail.pug
@@ -36,6 +36,7 @@ block pageOption
 include ../base/ContactBanner.pug
 
 block content
+  include ../parts/_global-navi.pug
   section.article
     h1.article__title 
       | 妊娠の届出・母子健康手帳の交付
