--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -21,6 +21,7 @@
 @import "base/banner";
 @import "base/tag";
 @import "base/search-result";
+@import "base/navigation";
 @import "common/accessibility";
 @import "common/header";
 @import "common/slick";
